# humanoid-mocap

./: .gitignore  CREDITS.md  DEPENDENCIES.md  README.md  control.sh  docker-compose.yaml  humanoid_config.py  requirements.txt  ros_dependencies.repos
.devcontainer/: Dockerfile  devcontainer.json
DATASET/EVAL/pose_data/: 1095284234_pose.json  1178801454_pose.json  1496159441_pose.json  1506915204_pose.json  1854666867_pose.json
pose_detection/: mp_detection.py
pose_to_motion/: AUTOGLUON_model.py  MLrequirements.txt  MultilabelPredictor.py  README.MD  README.md  Symbolicregresson.py  TORCH_model.py  convert_csv.py  improvedModel.py  load_json_data.py  loader.py  mp_detection.py  optimization_optuna.py  simpleModel.py  test.py  train.py
pose_to_motion/resources/: ML.drawio  Normalisation.drawio
src/camera_system/: CMakeLists.txt  package.xml
src/camera_system/launch/: spawn_camera.launch.py
src/camera_system/src/: camera_viewer.py
src/camera_system/srv/: CaptureMotionStatus.srv
src/camera_system/urdf/: camera_gazebo.xacro  camera_joints.xacro  camera_links.xacro  common_properties.xacro  indoor_camera.xacro
src/humanoid_robot/: CMakeLists.txt  README.md  package.xml
src/humanoid_robot/config/: gazebo_bridge.yaml
src/humanoid_robot/launch/: gazebo_model.launch.py  launch_humanoid.launch.py
src/humanoid_robot/model/human-gazebo/humanSubjectWithMeshes/: humanSubjectWithMesh_simplified.urdf
src/humanoid_robot/model/support/: arm_3dof.xacro  common_properties.xacro  human_support.xacro
src/humanoid_robot/rviz/: default.rviz
src/humanoid_robot/worlds/: empty.sdf
src/humanoid_support_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/humanoid_support_moveit_config/config/: human_support.ros2_control.xacro  human_support.srdf  human_support.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/humanoid_support_moveit_config/launch/: demo.launch.py  launch_controllers.launch.py  launch_gz.launch.py  launch_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/random_motion_planner/: package.xml  setup.cfg  setup.py
src/random_motion_planner/launch/: random_motion.launch.py
src/random_motion_planner/random_motion_planner/: motion_planner.py  urdf_parser.py
